# bigmap-zarr

./: .coverage  .coverage.Chriss-Laptop.local.89607.Xvqhbzqx  .coverage.Chriss-Laptop.local.89609.XkwVMMwx  .coverage.Chriss-Laptop.local.89611.XsymriZx  .cursorrules  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.jupyter  Dockerfile.processing  PROJECT_SCOPE.md  README.md  add_api_species_to_zarr.py  batch_add_missing_species.py  batch_processing_final.json  batch_processing_log.json  docker-compose.yml  hp-fia-plots.html  identify_missing_species.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py  test_config.yaml  verify_fixes.py  wordcloud_requirements.txt
.claude/: settings.local.json
.cursor/rules/: rootcause.mdc
.github/workflows/: ci.yml  docs.yml
analysis_bigmap/: heirs_property_fia_data_summary.md
analysis_bigmap/gpkg/: heirs_property_pine_share_stats.gpkg
analysis_bigmap/py/: compare_pine_species.py
analysis_heirs/: buffer_analysis_results.md  halifax_analysis.md  nc_heirs_property_report.md  ndvi_analysis_report.md  ndvi_analysis_report2.md
analysis_ndvi/: ndvi_analysis_report.md  ndvi_analysis_report_simplified.md  non_heirs_analysis_report.md  prototype_plan.md
analysis_ndvi/json/: property_count_analysis.json
bigmap/: __init__.py  __main__.py  api.py  config.py  config_templates.py  console.py
bigmap/api/: __init__.py  rest_client.py
bigmap/cli/: __init__.py  main.py
bigmap/core/: analyze_species_presence.py  create_species_diversity_map.py
bigmap/examples/: __init__.py  utils.py
bigmap/utils/: batch_append_species.py  clip_rasters_to_nc.py  create_nc_biomass_zarr.py  examples.py  location_config.py  parallel_processing.py
bigmap/visualization/: __init__.py  boundaries.py  map_nc_forest.py
cfg/: counties_config.yaml  mosaic_config.yaml  paths.yaml
config/: analysis.yaml  large_data_config.py
data/processed/: ndvi_analysis_results.json  neighbor_analysis_results.json  property_ndvi_analysis.json
docs/: CURRENT_STATUS.md  Proposed Workflow for HP Non-HP Forest Health NC Vance Co .docx  README.md  containerization_plan.md  file_inventory.md  heirs_modeling.docx  index.md  phase1_docker_setup.md  phase1_progress.md  testing_plan.md  testing_results.md
docs/api/: calculations.md  config.md  index.md
docs/architecture/: overview.md
docs/archive/: HP_Properties_NC_ReadME.docx  development_environment.md  implementation_steps.md  phase2_changes.md  phase2_completion_plan.md  pipeline_execution_plan.md  project_overview.md  project_status.md
docs/core/: chunked_processor.md  phase2_implementation.md  status.md
docs/issues/: database_schema_next_steps.md  debug_plan_map_visualization.md
docs/technical/: README.md  ndvi_data_documentation.md  neighbor_visualization_plan.md
docs/tutorials/: species-diversity-analysis.md
examples/: 01_quickstart.py  02_api_overview.py  03_location_configs.py  04_calculations.py  05_species_analysis.py  06_wake_county_full.py  README.md  __init__.py  api_usage_example.py  common_locations.py  forest_metrics_example.py  modern_cli_usage.py  multi_state_example.py  run_multiple_calculations.py  simple_county_demo.py  southern_yellow_pine_analysis.py  species_proportion_analysis.py  utils.py  wake_county_analysis.py  wake_county_builtin_viz.py
examples/output/: shannon_diversity.tif  species_richness.tif
init-db/: 01-init-schema.sql  01_setup_srs.sql  02-init-functions.sql  03-spatial-optimizations.sql
notebooks/: convert-gdb-to-parquet.ipynb  convert-hp-to-parquet.ipynb  create_hp_neighbors.py  hp-fia-plots.ipynb  test_environment.ipynb
scripts/: 01_download_montana_species_state_plane.py  02_build_montana_zarr_clipped.py  03_add_dominant_species_layer.py  04_create_main_map.py  05_create_boundary_overview_map.py  06_analyze_mill_isochrone_biomass.py  analyze_heirs_species_composition.py  analyze_isochrone_distances.py  analyze_mill_90min_biomass.py  analyze_ndvi.py  analyze_ndvi_prototype.py  analyze_neighbors.py  analyze_non_heirs_species.py  analyze_properties.py  analyze_property_counts.py  analyze_property_ndvi.py  backup_data.sh  backup_database.sh  create_compact_wordcloud.py  create_species_venn_diagram.py  create_venn_wordcloud_hybrid.py  deprecated_04_create_montana_overview_map.py  deprecated_05_create_dominant_species_map.py  deprecated_07_visualize_mill_isochrone.py  generate_isochrones_simple.py  generate_mill_isochrones.py  install_and_test.py  run_all_isochrone_analyses.py  run_shannon_analysis.py  setup_postgis.sh  test_setup.sh  visualize_mill_isochrones.py
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  analyze_properties.py  data_integrator.py  data_prep.py  mosaic_creator.py  ndvi_processor.py  ndvi_trend.py  property_matcher.py  run_ndvi_analysis.py  run_vance_analysis.py  stats_analyzer.py
src/config/: __init__.py  loader.py
src/data_processing/: __init__.py  processor.py  run_vance_processing.py
src/models/: __init__.py  vector_store.py
src/ndvi/: __init__.py
src/pipeline/: executor.py
src/processing/: __init__.py  chunked_processor.py  parcel_processor.py  pipeline_monitor.py  transaction_manager.py
src/property_matching/: __init__.py  validation.py
tests/: conftest.py  test_config.py  test_data_validator.py  test_database_performance.py  test_development.py  test_infrastructure.py  test_integration.py  test_neighbor_processor.py  test_pipeline.py  test_property_matcher.py
(+88 files in other folders)
