[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heirs-property"
version = "0.1.0"
description = "Heirs Property Analysis Tool"
requires-python = ">=3.8"
dependencies = [
    "geopandas",
    "pandas",
    "numpy",
    "psutil",
    "sqlalchemy",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/processing"] 

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 